// Copyright (c) 2018-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.
syntax = "proto3";

import "magma/orc8r/protos/mconfig.proto";
import "magma/orc8r/protos/common.proto";

package magma.orc8r.configurator;
option go_package = "protos";

message GetMconfigRequest {
    string hardwareID = 1;
}

message GetMconfigResponse {
    GatewayConfigs configs = 1;
    string logicalID = 2;
}

service SouthboundConfigurator {
    rpc GetMconfig(magma.orc8r.Void) returns (GatewayConfigs) {}

    // GetMconfigInternal exists to support the existing streamer mconfig
    // policy. This should be removed when we migrate gateway mconfig updates
    // from streamer to this southbound configurator servicer.
    rpc GetMconfigInternal(GetMconfigRequest) returns (GetMconfigResponse) {}
}